--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="clock">
+        <div id="seconds"></div>
+        <div id="minutes"></div>
+        <div id="hours"></div>
+        <div id="center"></div>
+    </div>
     
     <script src="script.js"></script>
 </body>
